fine tune event cards

--- a/_posts/2020-02-02-Delhi.md
+++ b/_posts/2020-02-02-Delhi.md
@@ -2,7 +2,9 @@
 layout: meetup
 title: Hands-on Introduction to Quantum Computing
 city: New Delhi
+venue: Indraprastha Institute of Information Technology Delhi
 date: 2020-02-02T13:30
+published: true
 ---
 
 Details
