--- a/_posts/2020-02-02-Delhi.md
+++ b/_posts/2020-02-02-Delhi.md
@@ -5,9 +5,7 @@ title: Hands-on Introduction to Quantum Computing
 city: New Delhi
 venue: Indraprastha Institute of Information Technology Delhi
 date: 2020-02-02T13:30
-img: dreams.png
-thumbnail: dreams-thumbnail.png
-alt: image-alt
+img: delhi.jpeg
 published: true
 ---
 
