--- a/_posts/2020-03-02-Kolkata.md
+++ b/_posts/2020-03-02-Kolkata.md
@@ -5,9 +5,7 @@ title: Hands-on Introduction to Quantum Computing
 city: Kolkata
 venue: IISER-Kolkata
 date: 2020-03-21T13:30
-img: dreams.png
-thumbnail: dreams-thumbnail.png
-alt: image-alt
+img: kolkata.jpeg
 published: false
 ---
 
