add registration button

--- a/_posts/2020-02-02-Delhi.md
+++ b/_posts/2020-02-02-Delhi.md
@@ -5,11 +5,9 @@ city: New Delhi
 venue: Indraprastha Institute of Information Technology Delhi
 date: 2020-02-02T13:30
 img: delhi.jpeg
+registration-link: https://indiq.typeform.com/to/cf7iIo
 published: true
 ---
-
-Details
-[REGISTRATION FORM BELOW]
 
 Welcome to our first monthly meetup in Delhi for those interested in Quantum Computing!
 
@@ -23,22 +21,16 @@ Concluding the session we will be joined by Junye, an Advocate from IBM's quantu
 
 We of course encourage you to discuss and bond with your fellow participants where you will begin to see familiar faces as the community grows.
 
-On: February 2, 2020
-At: Lecture Hall Complex, IIIT-Delhi
-From: 1:30 PM to 6:00 PM
-Registration Deadline: January 31, 2020
 Prerequisite: Knowledge of Python. It is a big advantage to be familiar with Jupyter Notebooks, but we will be sending out an e-mail to participants before the actual meetup.
-
-Registration Form: https://indiq.typeform.com/to/cf7iIo
 
 For further queries, reach out to our social media handles:
 
 IndiQ
-Twitter (@IndiQmeetups)
-Instagram (@indiqmeetups)
-Mail (indiqmeetups@gmail.com)
+- Twitter (@IndiQmeetups)
+- Instagram (@indiqmeetups)
+- Mail (indiqmeetups@gmail.com)
 
 BraQIIIT (IIIT-Delhi)
-Twitter (@BQiiit)
-Instagram (@braqiiit)
-Mail (braqiiit@gmail.com)
+- Twitter (@BQiiit)
+- Instagram (@braqiiit)
+- Mail (braqiiit@gmail.com)
