--- a/_posts/2020-03-02-Kolkata.md
+++ b/_posts/2020-03-02-Kolkata.md
@@ -5,11 +5,9 @@ city: Kolkata
 venue: IISER-Kolkata
 date: 2020-03-21T13:30
 img: kolkata.jpeg
+registration-link: https://indiq.typeform.com/to/cf7iIo
 published: false
 ---
-
-Details
-[REGISTRATION FORM BELOW]
 
 Welcome to our first monthly meetup in Hyderabad for those interested in Quantum Computing!
 
@@ -30,8 +28,6 @@ At: T-Hub, IIIT Hyderabad Campus
 From: 1:30 PM to 6:00 PM
 
 Prerequisite: Knowledge of Python. It is a big advantage to be familiar with Jupyter Notebooks, but we will be sending out an e-mail to participants before the actual meetup with the resources.
-
-Registration form: https://indiq.typeform.com/to/cf7iIo
 
 You can send an email with your queries to
 Rana Prathap: rana.prathap.simh@gmail.com
